# redpanda

./: .gitignore  ca.crt  ca.key  ca.srl  client1.crt  client1.csr  client1.key  hist_helper.py  pull_metrics.sh  server.crt  server.csr  server.key
cmake/: credgen.cmake
src/v/: CMakeLists.txt
src/v/arch/: CMakeLists.txt  error.cc  error.h  logger.h  manifest.cc  manifest.h  ntp_archiver_service.cc  ntp_archiver_service.h  service.cc  service.h
src/v/archival/: adjacent_segment_merger.cc  adjacent_segment_merger.h  archival_metadata_stm.cc  archival_policy.cc  archival_policy.h  archiver_data_upload_workflow.cc  archiver_housekeeping_workflow.cc  archiver_housekeeping_workflow.h  archiver_manager.cc  archiver_operations_api.cc  archiver_operations_api.h  archiver_operations_impl.cc  archiver_operations_impl.h  archiver_scheduler_api.cc  archiver_scheduler_api.h  async_data_uploader.cc  async_data_uploader.h  manifest.cc  manifest.h  ntp_archiver_service.cc  ntp_archiver_service.h  probe.cc  probe.h  service.cc  service.h  types.cc  types.h  upload_controller.cc  upload_controller.h  upload_scheduler.h
src/v/cloud_storage/: CMakeLists.txt  async_manifest_view.cc  async_manifest_view.h  cache_service.h  cache_utils.cc  cache_utils.h  manifest.cc  manifest.h  offset_translation_layer.cc  offset_translation_layer.h  partition_manifest.cc  partition_manifest.h  partition_probe.cc  partition_probe.h  partition_recovery_manager.cc  partition_recovery_manager.h  probe.cc  probe.h  recoursive_directory_waler.h  remote.cc  remote.h  remote_partition.cc  remote_partition.h  remote_segment.cc  remote_segment.h  remote_segment_index.cc  remote_segment_index.h  (+7 more)
src/v/wasm/: CMakeLists.txt  Cargo.toml  build.rs  logger.cc  logger.h  wasm_bindings.h
src/v/wasm/src/: cxx.cc  lib.rs
src/v/wasm/tests/: CMakeLists.txt  test_wasm_bindings.cc
src/v/wasm/tests/wasm_module/: Cargo.toml
src/v/wasm/tests/wasm_module/src/: main.rs
taskfiles/: rp.yml
tests/: setup.py
tests/rptest/: test_suite_quick.yml
tools/: credgen.py  hist_helper.py
tools/cloud_storage_manifest_patcher/: main.py
(+184 files in other folders)
